--- a/src/app/pages/domoboard/status-card/status-card.component.html
+++ b/src/app/pages/domoboard/status-card/status-card.component.html
@@ -1,4 +1,4 @@
-<nb-card (click)="on = !on" [ngClass]="{'off': !on}">
+<nb-card (click)="switchLight()" [ngClass]="{'off': !on}">
   <div class="icon-container">
     <div class="icon primary">
       <ng-content></ng-content>
