--- a/src/_themes.scss
+++ b/src/_themes.scss
@@ -8,4 +8,5 @@ $nb-themes: nb-register-theme((
   // shadow: 0 1px 2px 0 #000000,
   // color-fg: #303030,
   // layout-bg: #ededed,
+  tabs-padding: 1.7rem
 ), cosmic, cosmic);
