--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -44,16 +44,22 @@
     }
 
     .logo {
+      display: flex;
+      align-items: center;
+      height: 4.75rem;
       padding: 0 nb-theme(padding);
       font-size: 1.75rem;
       font-weight: nb-theme(font-weight-bolder);
-      @include nb-ltr(border-left, 1px solid nb-theme(separator));
-      @include nb-rtl(border-right, 1px solid nb-theme(separator));
+      @include nb-ltr(border-right, 1px solid nb-theme(separator));
       white-space: nowrap;
 
       span {
         font-weight: nb-theme(font-weight-normal);
       }
+    }
+
+    ::ng-deep .tabset {
+      border: none;
     }
   }
 }
