--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,8 @@
 
 </nb-layout>
 
+<nd-settings-sidebar></nd-settings-sidebar>
+
 <nb-alert *ngIf="(notification$ | async) as notification" class="nd-alert"
   status="danger" closable (close)="onClose()">
   {{ notification }}
