base url tsconfig webpack plugin

--- a/src/app/shared/components/settings-sidebar/toggle-settings-button/toggle-settings-button.component.scss
+++ b/src/app/shared/components/settings-sidebar/toggle-settings-button/toggle-settings-button.component.scss
@@ -18,6 +18,7 @@
 
       &.pulse {
         animation-name: gear-pulse;
+        animation-delay: 500ms;
         animation-duration: 1s;
         animation-iteration-count: infinite;
       }
