--- a/src/app/pages/lights/lights.component.html
+++ b/src/app/pages/lights/lights.component.html
@@ -3,7 +3,7 @@
 
     <nd-status-card [title]="light.Name" (statusChanged)="statusChanged($event, light)"
       [on]="light.Status === 'On'">
-      <i *ngIf="icon[light.Image].startsWith('nb'); else svgIcon" [ngClass]="icon[light.Image]"></i>
+      <i *ngIf="icon[light.Image]?.startsWith('nb'); else svgIcon" [ngClass]="icon[light.Image]"></i>
       <ng-template #svgIcon>
           <nd-svg-icon class="nd-icon {{ light.Status }}" [name]="icon[light.Image]"></nd-svg-icon>
       </ng-template>
