--- a/src/app/shared/components/status-card/status-card.component.scss
+++ b/src/app/shared/components/status-card/status-card.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../themes';
+@import 'src/_themes.scss';
 @import '~@nebular/bootstrap/styles/hero-buttons';
 
 @include nb-install-component() {
