--- a/src/app/shared/components/settings-sidebar/settings-content/settings-content.component.scss
+++ b/src/app/shared/components/settings-sidebar/settings-content/settings-content.component.scss
@@ -13,7 +13,7 @@
       margin: 15vh 20px;
 
       .form-control:focus {
-        color: nb-theme(color-white);
+        color: nb-theme(text-control-color);
       }
 
       .input-danger {
