--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,65 +1,32 @@
-@import 'src/_themes.scss';
+@import '../../../../themes';
 
 @include nb-install-component() {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
 
-  .left {
-    display: flex;
-    width: 100%;
-    order: 0;
-    flex-direction: row;
+  .header-container .logo-containter .logo {
+    color: nb-theme(text-primary-color);
+    font-weight: nb-theme(text-paragraph-font-weight);
+    @include nb-ltr(border-right, 1px solid nb-theme(divider-color));
   }
-  .right {
-    order: 1;
-    flex-direction: row-reverse;
+}
+
+.header-container {
+  display: flex;
+
+  #header-tabset {
+    padding: 0 1.25rem;
   }
 
   .logo-containter {
     display: flex;
     align-items: center;
-    width: calc(#{nb-theme(sidebar-width)} - #{nb-theme(header-padding)});
-  }
-
-  .control-item {
-    display: block;
-  }
-
-  .header-container {
-    display: flex;
-    align-items: center;
-    width: auto;
-
-    .navigation {
-      @include nb-ltr(padding-right, nb-theme(padding));
-      @include nb-rtl(padding-left, nb-theme(padding));
-      font-size: 2.5rem;
-      text-decoration: none;
-
-      i {
-        display: block;
-      }
-
-    }
 
     .logo {
       display: flex;
       align-items: center;
       height: 4.75rem;
-      padding: 0 nb-theme(padding);
+      padding: 0 1.25rem;
       font-size: 1.75rem;
-      font-weight: nb-theme(font-weight-bolder);
-      @include nb-ltr(border-right, 1px solid nb-theme(separator));
       white-space: nowrap;
-
-      span {
-        font-weight: nb-theme(font-weight-normal);
-      }
-    }
-
-    ::ng-deep .tabset {
-      border: none;
     }
   }
 }
