--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,8 @@
 
 @import '~@nebular/theme/styles/globals';
 
+@import './app/shared/components/header/header-theme';
+
 @include nb-install() {
   @include nb-theme-global();
 };
-/* You can add global styles to this file, and also import other style files */
