--- a/src/app/pages/lights/lights.component.scss
+++ b/src/app/pages/lights/lights.component.scss
@@ -18,8 +18,8 @@
     }
 
     &.On {
-      fill: nb-theme(text-alternate-color);
-      stroke: nb-theme(text-alternate-color);
+      fill: nb-theme(text-primary-color);
+      stroke: nb-theme(text-primary-color);
     }
   }
 }
