--- a/src/app/shared/components/status-card/status-card.component.scss
+++ b/src/app/shared/components/status-card/status-card.component.scss
@@ -2,53 +2,23 @@
 @import '~@nebular/bootstrap/styles/hero-buttons';
 
 @include nb-install-component() {
+
   nb-card {
-    flex-direction: row;
-    align-items: center;
-    height: 6rem;
-    overflow: visible;
-
-    $bevel: btn-hero-bevel(nb-theme(background-basic-color-1));
-    $shadow: nb-theme(shadow);
-    box-shadow: $bevel, $shadow;
-
-    &.disabled {
-      pointer-events: none;
-      opacity: 0.3;
-    }
-
-    &.no-event {
-      pointer-events: none;
-    }
-
-    .icon-container {
-      height: 100%;
-      padding: 0.625rem;
-    }
+    box-shadow: nb-theme(button-hero-bevel-size) #342f6e, nb-theme(shadow);
 
     .icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 5.75rem;
-      height: 4.75rem;
-      font-size: 3.75rem;
-      border-radius: nb-theme(card-border-radius);
-      transition: width 0.4s ease;
-      transform: translate3d(0, 0, 0);
-      -webkit-transform-style: preserve-3d;
-      -webkit-backface-visibility: hidden;
-      color: nb-theme(text-control-color);
+      border-radius: nb-theme(card-border-radius) 0 0 nb-theme(card-border-radius);
+      color: nb-theme(text-primary-color);
 
-      @include nb-for-theme(corporate) {
-        &.primary,
-        &.success,
-        &.info,
-        &.warning,
-        &.danger,
-        &.secondary {
-          box-shadow: none;
-        }
+      &.primary {
+        $left-color: nb-theme(button-hero-primary-left-background-color);
+        $right-color: nb-theme(button-hero-primary-right-background-color);
+        $glow: nb-theme(button-hero-glow-size) nb-theme(button-hero-primary-glow-color);
+        $shadow: nb-theme(button-hero-shadow);
+        $bevel: nb-theme(button-hero-bevel-size) nb-theme(button-hero-primary-bevel-color);
+        $hero-box-shadows: $bevel, $glow, $shadow;
+        background-image: linear-gradient(to right, $left-color, $right-color);
+        box-shadow: $hero-box-shadows;
       }
     }
 
@@ -56,23 +26,9 @@
       background: lighten(nb-theme(background-basic-color-1), 5%);
 
       .icon {
+
         &.primary {
           background-image: btn-hero-primary-light-gradient();
-        }
-        &.success {
-          background-image: btn-hero-success-light-gradient();
-        }
-        &.info {
-          background-image: btn-hero-info-light-gradient();
-        }
-        &.warning {
-          background-image: btn-hero-warning-light-gradient();
-        }
-        &.danger {
-          background-image: btn-hero-danger-light-gradient();
-        }
-        &.secondary {
-          background-image: btn-hero-secondary-light-gradient();
         }
       }
     }
@@ -82,15 +38,6 @@
 
       .icon {
         color: nb-theme(text-basic-color);
-
-        &.primary, &.success, &.info, &.warning, &.danger {
-          box-shadow: none;
-          background-image: linear-gradient(to right, transparent, transparent);
-        }
-
-        &.secondary {
-          background: transparent;
-        }
       }
 
       .title {
@@ -99,69 +46,82 @@
     }
 
     .details {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      height: 100%;
       @include nb-ltr(padding, 0 0.5rem 0 0.75rem);
       @include nb-rtl(padding, 0 0.75rem 0 0.5rem);
-      border-left: 1px solid transparent;
     }
 
     .title {
       font-family: nb-theme(font-family-secondary);
-      font-size: 1.25rem;
-      font-weight: nb-theme(text-heading-5-font-weight);
-      color: nb-theme(text-basic-color);
+      font-weight: nb-theme(text-subtitle-font-weight);
+      color: nb-theme(text-primary-color);
     }
 
     .status {
-      font-size: 1rem;
-      font-weight: nb-theme(text-heading-2-font-weight);
-      text-transform: uppercase;
+      font-weight: nb-theme(text-paragraph-font-weight);
       color: nb-theme(text-basic-color);
     }
   }
+}
 
-  @include nb-for-theme(cosmic) {
-    nb-card {
-      &.off .icon-container {
-        @include nb-ltr(border-right, 1px solid nb-theme(divider-color));
-        @include nb-rtl(border-left, 1px solid nb-theme(divider-color));
+nb-card {
+  flex-direction: row;
+  align-items: center;
+  height: 6rem;
+  overflow: visible;
+
+  &.disabled {
+    pointer-events: none;
+    opacity: 0.3;
+  }
+
+  &.no-event {
+    pointer-events: none;
+  }
+
+  .icon-container {
+    height: 100%;
+    padding: 0;
+    border-right: 1px solid #342e73;
+  }
+
+  .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 7rem;
+    height: 100%;
+    font-size: 3.75rem;
+  }
+
+  &.off {
+
+    .icon {
+
+      &.primary {
+        box-shadow: none !important;
+        background-image: linear-gradient(to right, transparent, transparent) !important;
       }
 
-      .icon-container {
-        padding: 0;
-      }
-
-      .details {
-        @include nb-ltr(padding-left, 1.25rem);
-        @include nb-rtl(padding-right, 1.25rem);
-      }
-
-      .icon {
-        width: 7rem;
-        height: 100%;
-        font-size: 4.5rem;
-        @include nb-ltr(border-radius, nb-theme(card-border-radius) 0 0 nb-theme(card-border-radius));
-        @include nb-rtl(border-radius, 0 nb-theme(card-border-radius) nb-theme(card-border-radius) 0);
-      }
-
-      .title {
-        font-weight: nb-theme(text-heading-4-font-weight);
-      }
-
-      .status {
-        font-weight: nb-theme(text-heading-2-font-weight);
+      &.secondary {
+        background: transparent;
       }
     }
   }
 
-  @include nb-for-theme(corporate) {
-    nb-card {
-      .icon-container {
-        height: auto;
-      }
-    }
+  .details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    border-left: 1px solid transparent;
+  }
+
+  .title {
+    font-size: 1.25rem;
+  }
+
+  .status {
+    font-size: 1rem;
+    text-transform: uppercase;
   }
 }
