--- a/src/app/shared/components/settings-sidebar/settings-sidebar.component.scss
+++ b/src/app/shared/components/settings-sidebar/settings-sidebar.component.scss
@@ -7,7 +7,7 @@
   justify-content: flex-end;
   min-width: 20rem;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
 
