--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
   <div class="logo-containter">
-    <a class="navigation" (click)="menuToggle.emit()"><i class="nb-menu"></i></a>
+    <a class="navigation" (click)="menuToggle.emit()"><i id="menu-icon" class="nb-menu"></i></a>
     <div class="logo"><span>{{ name }}</span></div>
   </div>
 
