--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nb-layout>
-  <nb-layout-header class="header" fixed>
+  <nb-layout-header class="header">
     <nd-header (menuToggle)="onMenuToggle()"></nd-header>
   </nb-layout-header>
 
-  <nb-layout-column>
+  <nb-layout-column class="content">
     <router-outlet></router-outlet>
   </nb-layout-column>
 
@@ -12,7 +12,9 @@
   </nb-layout-footer>
 </nb-layout>
 
-<nd-menu-sidebar *ngIf="showMenu" [animationState]="menuState"></nd-menu-sidebar>
+<nd-menu-sidebar *ngIf="showMenu" [animationState]="menuState"
+  (outsideClick)="onMenuToggle()">
+</nd-menu-sidebar>
 
 <nd-settings-sidebar></nd-settings-sidebar>
 
