--- a/src/app/shared/components/menu-sidebar/menu-sidebar.component.scss
+++ b/src/app/shared/components/menu-sidebar/menu-sidebar.component.scss
@@ -3,18 +3,19 @@
 
 @include nb-install-component() {
 
-  .sidebar-container {
+  #menu-sidebar {
     background: nb-theme(background-basic-color-2);
   }
 }
 
-.sidebar-container {
+#menu-sidebar {
   display: flex;
   justify-content: flex-start;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10000;
   animation-duration: 500ms;
   overflow: hidden;
 
@@ -28,5 +29,12 @@
 
   .menu {
     margin: 5rem 0 0 0;
+  }
+}
+
+@media (min-width: 768px) {
+
+  #menu-sidebar {
+    display: none;
   }
 }
