--- a/src/app/pages/switches/switches.component.html
+++ b/src/app/pages/switches/switches.component.html
@@ -7,7 +7,7 @@
         <div class="col-xxxl-3 col-md-6" *ngIf="switch.SwitchType === switchType">
           <nd-status-card [title]="switch.Name" (statusChanged)="statusChanged($event, switch)"
             [on]="switch.Status === 'On'" [disabled]="switch.HaveTimeout" [status]="switch.Status"
-            [loading]="switchLoading && clickedIdx === switch.idx">
+            [loading]="switchLoading && clickedIdx === switch.idx" (optionsClick)="onOptionsClick(switch.idx)">
             <i *ngIf="icon[switch.Image]?.startsWith('nb'); else svgIcon" [ngClass]="icon[switch.Image]"></i>
 
             <ng-template #svgIcon>
