--- a/src/app/pages/temperature/temperature.component.scss
+++ b/src/app/pages/temperature/temperature.component.scss
@@ -1,4 +1,4 @@
-@import 'src/_themes.scss';
+@import 'src/themes';
 
 @include nb-install-component() {
 
@@ -7,27 +7,6 @@
 
     .type {
       font-size: nb-theme(text-heading-5-font-size);
-    }
-
-    .nd-icon {
-      width: 100%;
-      height: 100%;
-
-      &.Off {
-        fill: nb-theme(text-basic-color);
-        stroke: nb-theme(text-basic-color);
-      }
-
-      &.Closed {
-        fill: nb-theme(text-basic-color);
-        stroke: nb-theme(text-basic-color);
-        pointer-events: none;
-      }
-
-      &.On {
-        fill: nb-theme(text-primary-color);
-        stroke: nb-theme(text-primary-color);
-      }
     }
   }
 }
